<resources>
    <string name="app_name">Recipe Reviews</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_single_word">Login</string>
    <string name="login_two_words">Log In</string>
    <string name="register_question"><u>Register?</u></string>
    <string name="invalid_email">This is not an email format</string>
    <string name="invalid_password">The password should be at least 6 characters long</string>
    <string name="update_invalid_password">If you wish to update your password, it should be at least 6 characters long. If you don\'t, leave it empty.</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_exists">This Email is already registered</string>
    <string name="required_field">Required field</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="search">Search</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions">Instructions:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="preparation_time">Ready in: %1$s Minutes</string>
    <string name="reviews_header">Reviews (%1$s)</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="my_reviews">My Reviews</string>
    <string name="logout">Logout</string>
    <string name="recipe_reviews">Recipe Reviews</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="review_name_placeholder">Review - %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="rate">Rate</string>
    <string name="save">Save</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password (if you update password)</string>
    <string name="new_password">New Password (if you update password)</string>
    <string name="clear">Clear</string>
</resources>