<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".fragments.user.SaveReviewFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_name_placeholder"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/review_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/blank_review_image"
                app:layout_constraintStart_toStartOf="@id/recipe_name"
                app:layout_constraintTop_toBottomOf="@id/recipe_name"
                app:shapeAppearanceOverlay="@style/roundCornerImageViewStyle10" />

            <RelativeLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/review_image"
                app:layout_constraintTop_toBottomOf="@id/review_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:id="@+id/rating_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:theme="@style/RatingBar"
                        app:layout_constraintStart_toStartOf="@id/rating_header"
                        app:layout_constraintTop_toBottomOf="@id/rating_header" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reviewDescriptionTextInput"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="top"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="@+id/rating_layout"
                app:layout_constraintTop_toBottomOf="@+id/rating_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/review_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:textStyle="bold|italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#3164f4"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    app:cornerRadius="30dp" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:indicatorSize="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showAnimationBehavior="none" />

</androidx.constraintlayout.widget.ConstraintLayout>